--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==4.2.16
 gunicorn==23.0.0
 packaging==24.1
 pillow==11.0.0
+plotly==5.24.1
 sqlparse==0.5.1
+tenacity==9.0.0
 typing-extensions==4.12.2
 whitenoise==6.7.0
